# zouari-rs

./: .gitignore  .infisical.json  CONTRIBUTING.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yaml  deploy.yml
apps/web/: CHANGELOG.md  Dockerfile  next.config.ts  package.json  tsconfig.json
apps/web/src/: theme.ts
backend/: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  docker-compose.yml
backend/.cargo/: config.toml
backend/.github/workflows/: ci.yaml
backend/config/: development.yaml  production.yaml  test.yaml
backend/examples/: playground.rs
backend/migration/src/: m20220101_000001_users.rs
backend/src/: app.rs  config.rs  lib.rs
backend/src/controllers/: auth.rs
backend/src/mailers/: auth.rs
backend/src/models/: users.rs
backend/src/views/: auth.rs
backend/tests/models/: users.rs
backend/tests/requests/: auth.rs  prepare_data.rs
docs/: environment.md
docs/adr/: 0001-use-infisical-for-secret-management.md  0002-add-validation-package.md  0003-automatic-frontend-validation.md  0004-hybrid-build-strategy.md  0005-deployment-strategy.md  0005-extract-shared-ui-library.md  0006-managed-infrastructure.md  0007-adopt-esm-for-web-and-packages.md  0008-public-source-available-transition.md  0009-env-slug-deployment-alignment.md  0009-uuid-deployment-and-tagging.md
docs/guides/: package-architecture.md  production-infrastructure.md
infra/docker/: docker-compose.dev.yml  docker-compose.prod.yml
infra/docker/traefik/: traefik.yml
(+31 files in other folders)
